# HM-CNNF

./: CMakeLists.txt  README.md  readme  readme.md  readme.md~  readme~
PreProcess/: UCID1.cfg  UCID1.cfg~  UCID2.cfg  UCID2.cfg~  generate_DataQP.m  generate_train.sh  generate_train.sh~  generate_trainData.m  generate_trainData_chromawithQP.m  set1.txt  set2.txt  store2hdf5_chroma.m  store2hdf5_chromaQP.m
PreProcess/train_caffe_model/: RRNchromawithQP_solver.prototxt  RRNchromawithQP_train.prototxt  RRNwithQP_solver.prototxt  RRNwithQP_train.prototxt  train_net.sh
cfg/: encoder_intra_main.cfg  encoder_intra_main.cfg~  encoder_intra_main10_cnnf.cfg  encoder_intra_main10_cnnf.cfg~
cfg/per-sequence/: BQSquare.cfg
sequences_test /: run_ai_encoder.sh~  run_ai_encoder_10.sh  run_all_ai_encoder.sh  run_all_ai_encoder.sh~
source/App/TAppEncoder/: CMakeLists.txt  CMakeLists.txt~  Makefile  TAppEncCfg.cpp  TAppEncCfg.h  TAppEncTop.cpp  cmake_install.cmake  encmain.cpp
source/Lib/TAppCommon/: CMakeLists.txt  Makefile  cmake_install.cmake
source/Lib/TLibCommon/: CMakeLists.txt  Makefile  TComCnnFilter.cpp  TComCnnFilter.h~  TComPicSym.cpp  TComPicSym.h  TComSlice.h  TypeDef.h  cmake_install.cmake
source/Lib/TLibEncoder/: CMakeLists.txt  CMakeLists.txt~  Makefile  TEncCavlc.cpp  TEncCavlc.h  TEncCfg.h  TEncEntropy.h  TEncGOP.cpp  TEncSampleAdaptiveOffset.cpp  TEncSampleAdaptiveOffset.h  TEncSbac.cpp  TEncSbac.h  TEncSlice.cpp  TEncTop.cpp  TEncTop.h  cmake_install.cmake
source/Lib/TLibVideoIO/: CMakeLists.txt  Makefile  cmake_install.cmake
source/Lib/libmd5/: CMakeLists.txt  Makefile  cmake_install.cmake
